# VoxelEngine

./: Cargo.toml  test  text.text
assets/shaders/: frag.glsl  vertex.glsl
res/shaders/: frag.glsl  vertex.glsl
shaders/: frag.glsl  vertex.glsl
src/: app.rs  block_collections.rs  chunk.rs  image.rs  input.rs  main.rs  mesh.rs  shader.rs  shader_program.rs  timer.rs  utils.rs  voxel.rs
src/buffer/: ibo.rs  mod.rs  vao.rs  vbo.rs  vertex.rs
src/buffers/: ibo.rs  mod.rs  vao.rs  vao_builder.rs  vbo.rs  vertex.rs
src/rendering/: camera.rs  image.rs  mesh.rs  mod.rs  shader_program.rs  texture.rs
src/rendering/shader/: shader.rs  shader_program.rs
src/rendering/shapes/: cube.rs
src/systems/: chunk_builder.rs  chunk_manager.rs  mod.rs
