[package]
name = "opengl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
gl = "0.14.0"
glfw = "0.54.0"
image = "0.24.7"
log = "0.4.20"
nalgebra-glm = "0.18.0"
noise = "0.8.2"
owo-colors = "3.5.0"
rand = "0.8.5"
